test: test new features